Sat Jul 12 20:35:28 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* fixed bug 114764, trouble with globals and RVT's
	  with minor changes in variables.c and transform.c
	  so that any global instantiated with an RVT gets
	  uninitialized when the RVT is destroyed.
	  
Thu Jul 10 15:47:33 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: simple cast missing Peter Breitenlohner
	* breakpoint/Makefile.am: added deps to libxslt
	* tests/exslt/common/Makefile.am: integrated William Brack test
	  in the regression suite

Wed Jul  9 21:27:43 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* fixed bug 114812, trouble with imported exslt functions
	  added lookup function in libxslt/extension.c
	  enhanced exsltInitFunc in libexslt/functions.c to take
	  better care of imports

Wed Jul  9 12:19:34 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* python/generator.py python/libxslt-python-api.xml python/libxslt.c
	  python/libxslt_wrap.h python/libxsltclass.txt: patch from
	  Sean Treadway, adding Python bindings for extension element and
	  some bindings cleanups.
	* python/tests/Makefile.am python/tests/extelem.py: also add an
	  example/test.

Tue Jul  8 12:20:11 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* python/libxml_wrap.h: applied patch from #116943 which should
	  fix the xsltSaveResultToFile python binding.

Mon Jul  7 11:03:18 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* INSTALL: removed an old reference to libxml2 >= 2.2.12

Sun Jul  6 23:57:35 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in: releasing 1.0.31
	* doc/*: update and rebuild of the docs

Sun Jul  6 18:31:56 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #115913 for xsl:copy with namespace
	  nodes.
	* tests/docs/Makefile.am tests/docs/bug-122.*
	  tests/general/Makefile.am tests/general/bug-122*: added the
	  test to the regression suite.
	
Sun Jul  6 18:09:13 CEST 2003 Daniel Veillard <daniel@veillard.com>
