@@ -32,6 +32,6 @@ result  : 31536000
 seconds : 1971-01-01T00:00:00
 result  : -31536000
 seconds : 0001-01-01T00:00:00
-result  : 2006054656
+result  :  6.21355968e+10
 seconds : -0001-01-01T00:00:00
-result  : 2037590656
+result  :  6.21671328e+10
